--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -13,8 +13,8 @@
               <span *ngIf="isUsernameInvalid">Please enter a valid username</span>
             </div>
             <div class="form-group row">
-              <label for="username">Password</label>
-              <input type="text" name="password" id="password" formControlName="password" placeholder="Please enter your password">
+              <label for="password">Password</label>
+              <input type="password" name="password" id="password" formControlName="password" placeholder="Please enter your password">
               <span *ngIf="isPasswordInvalid">Please enter a valid password</span>
             </div>
             <span class="col-md-6 offset-md-4">
