--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,22 +1,25 @@
-header{
+header {
     border-radius: 1px solid;
 }
-.reddit-icon-svg{
+
+.reddit-icon-svg {
     height: 50px;
     padding: 8px 8px 8px 0;
     width: 50px;
 }
 
-.reddit-text{        
+.reddit-text {
     font-weight: 700;
     height: 50px;
-    width: 50px;    
+    width: 50px;
 }
-.logo{
+
+.logo {
     text-decoration: none;
 }
 
-.login, .signup{    
+.login,
+.signup {
     background-color: transparent;
     border-color: #0079D3;
     color: #0079D3;
@@ -33,14 +36,17 @@ header{
     line-height: 24px;
     text-transform: uppercase;
     padding: 3px 16px;
-    opacity: 1;  
+    opacity: 1;
+    float: right;
+    margin-right: 1%;
 }
-.signup{
+
+.signup {
     background-color: #0079D3;
     border-color: #0079D3;
     color: aliceblue;
 }
 
-.signup:hover{
+.signup:hover {
     opacity: 0.6;
 }
