--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
                 <app-post-tile [posts]="posts"></app-post-tile>
             </div>
             <div class="col-md-3">
-                <app-home-side-bar></app-home-side-bar>
+                <app-side-bar></app-side-bar>
                 <app-home-subreddit-side-bar></app-home-subreddit-side-bar>
             </div>
         </div>
