--- a/src/app/post/create-post/create-post.component.html
+++ b/src/app/post/create-post/create-post.component.html
@@ -1,1 +1,42 @@
-<p>create-post works!</p>
+<div class="container">
+    <div class="row justify-content-center">
+        <hr>
+        <div class=" create-post-container col-md-11">
+            <form [formGroup]="postForm" (ngSubmit)="onSubmit()">
+                <div class="form-group">
+                    <div class="create-post-heading">Create Post</div>
+                    <hr>
+                    <input type="text" class="form-control mt-5" formControlName="postTitle" placeholder="Title">
+
+                    <select class="form-control" style="margin-top: 10px" formControlName="subredditName">
+                        <option value="" selected disabled>Select Subreddit</option>
+                        <option *ngFor="let subreddit of subreddits">{{subreddit.name}}</option>
+                    </select>
+                    <editor [formControlName]="'description'" [init]="{
+                        height: 500,
+                        menubar: false,
+                        plugins: [
+                          'advlist autolink lists link image charmap print preview anchor',
+                          'searchreplace visualblocks code fullscreen',
+                          'insertdatetime media table paste code help wordcount'
+                        ],
+                        toolbar:
+                          'undo redo | formatselect | bold italic backcolor | \
+                          alignleft aligncenter alignright alignjustify | \
+                          bullist numlist outdent indent | removeformat | help'
+                      }"></editor>
+                    <span>
+                        <div style="margin-top: 5px" class="float-right">
+                            <button type="button" (click)="onCancel()" class="btnDiscard">Discard</button>
+                            <button type="submit" class="btnCreatePost">Post</button>
+                        </div>
+                    </span>
+                </div>
+            </form>
+        </div>
+        <!-- <div class="col-md-3">
+            <guidelines></guidelines>
+            <about></about>
+          </div> -->
+    </div>
+</div>
